# DIKWP

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  GOVERNANCE.md  LICENSE  MANIFEST.json  PROJECT_CHARTER.md  QUICKSTART_CN.md  README.md  README_EN.md  RELEASE_NOTES.md  SECURITY.md  SHA256SUMS  VALIDATION_REPORT.json  pyproject.toml
benchmark/: README.md  scenario_index.csv  scenarios.jsonl
docs/: 段玉聪_DIKWP-PACT_开放意图保障与认知轨迹关键项目_v0.1.0_CN_最终交付版.docx
examples/traces/: always_allow_examples.json  keyword_guard_examples.json  pact_reference_examples.json
governance/: RELEASE_GATES.md  REPLICATION_REPORT_TEMPLATE.md  SUBMISSION_RULES.md
interop/: NIST_EU_OECD_CROSSWALK.md
outputs/: audit_report_always_allow.md  audit_report_keyword_guard.md  audit_report_output_only_guard.md  audit_report_pact_reference.md  baseline_summary.json  leaderboard.csv  traces_always_allow.json  traces_keyword_guard.json  traces_output_only_guard.json  traces_pact_reference.json
paper/: ABSTRACT_EN.md  MANUSCRIPT_OUTLINE_CN.md  PREREGISTRATION.md
project/: 90_DAY_PLAN.md  GITHUB_PUBLICATION_RUNBOOK_CN.md  PROJECT_BOARD_IMPORT.csv
prototype/: index.html
qa/: a11y_final.json  baseline_stdout.json  clean_environment.txt  docx_stats.json  js_syntax.txt  schema_validation.json  unittest.txt
references/: SOURCE_SNAPSHOT.md  source_snapshot.json
schemas/: audit_finding.schema.json  purpose_contract.schema.json  scenario.schema.json  submission.schema.json  trace.schema.json
scripts/: run_baselines.py
tests/: test_core.py
(+6 files in other folders)
