[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dikwp-pact"
version = "0.1.0"
description = "Offline purpose-aware agent assurance benchmark and cognitive trace scorer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Yucong Duan"}, {name = "DIKWP-PACT Contributors"}]
keywords = ["DIKWP", "agent audit", "purpose contract", "traceability", "benchmark"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License"]

[project.scripts]
dikwp-pact = "dikwp_pact.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
